--- a/00-Definitions_Etudiant.tex
+++ b/00-Definitions_Etudiant.tex
@@ -14,7 +14,7 @@
 \newcommand\moisDepot{Juin}       % Month
 \newcommand\monSexe{M}           % "M" ou "F" = Gender
 \newcommand\PageGarde{O}         % "O" ou "N" = Yes or No
-\newcommand\AnnexesPresentes{N}  % "O" ou "N". Indique si le document comprend des annexes. / If the thesis includes annexes = O; if it does not N = No.
+\newcommand\AnnexesPresentes{O}  % "O" ou "N". Indique si le document comprend des annexes. / If the thesis includes annexes = O; if it does not N = No.
 \newcommand\mesMotsClef{Liste,de,mot-clés,séparés,par,des,virgules}
 %%
 %%  DEFINITION DU / OF JURY
