--- a/10-Annexes.tex
+++ b/10-Annexes.tex
@@ -12,18 +12,415 @@
 %%  Toutes les annexes doivent être inclues dans ce document
 %%  les unes à la suite des autres.
 %%  All annexes must be included in this document one after the other.
-\Annexe{Démo}
-Texte de l'annexe A\@. Remarquez que la phrase précédente se termine
-par une lettre majuscule suivie d'un point. On indique explicitement
-cette situation à \LaTeX{} afin que ce dernier ajuste correctement
-l'espacement entre le point final de la phrase et le début de la
-phrase suivante.
+\Annexe{Requêtes SQL pertinentes}
+Cette section détaillera certaines requêtes qui n'ont pas été listées dans le texte principal du mémoire, mais qui sont pertinentes.
+\section{Identification lots problématiques}\label{sec:annexe_identification_lots_problématiques}
+Du fait de problèmes de complétude des données du rôle foncier, il est potentiellement nécessaire d'aider l'analyste à identifier des lots qui doivent potentiellement être revisités.
+\begin{lstlisting}
+    SELECT
+    	cad.g_no_lot,
+    	COUNT(rf.id_provinc) AS compte_role,
+    	COUNT(
+    		CASE 
+    			WHEN (rf.rl0308a IS NULL AND rf.rl0105a::int <= 1999)
+    				 OR (rf.rl0311a IS NULL AND rf.rl0105a::int >= 2000)
+    			THEN 1 
+    		END
+    	) AS compte_donnee_manquant,
+    	COUNT(CASE WHEN rf.rl0307a IS NULL THEN 1 END) AS compte_date_manquant,
+    	(CASE WHEN inv.n_places_min = 0 THEN TRUE ELSE FALSE END) AS n_places_min_nul
+    FROM role_foncier rf
+    JOIN association_cadastre_role acr ON acr.id_provinc = rf.id_provinc
+    JOIN cadastre cad ON acr.g_no_lot = cad.g_no_lot
+    JOIN inventaire_stationnement inv ON cad.g_no_lot = inv.g_no_lot
+    WHERE inv.methode_estime = 2
+    GROUP BY cad.g_no_lot, inv.n_places_min;
+\end{lstlisting}
+\section{Inventaire compilé par quartier}\label{sec:annexe_inventaire_agrege_par_quartier}
+L'agrégation du stationnement est faite avec une requête spatiale assez onéreuse. D'autre part, un lot aurait potentiellement plusieurs inventaires avec différentes méthodes. L'application web permet de prioriser différents types d'inventaires en fonction de la préférence de l'analyste. Les colonnes inv\_XYZ représentent chacune une priorité entre les différentes méthodologies d'inventaire.
+\begin{lstlisting}
+    DELETE FROM stat_agrege;
+        WITH LotNeighborhood AS (
+          SELECT 
+            c.g_no_lot, 
+            s.id_quartier,
+            s.superf_quartier,
+            s.geometry,
+            s.nom_quartier
+          FROM public.cadastre c
+          JOIN public.sec_analyse s 
+            ON ST_Area(ST_Intersection(s.geometry, c.geometry)) / ST_Area(c.geometry) > 0.9
+        ),
+
+        inv_123 AS (
+          SELECT ln.id_quartier, ln.geometry, ln.superf_quartier, ln.nom_quartier,
+                CEIL(SUM(COALESCE(sub.parking_estimate, 0))) AS inv_123
+          FROM LotNeighborhood ln
+          LEFT JOIN LATERAL (
+            SELECT 
+              COALESCE(
+                CASE WHEN i.methode_estime = 1 THEN i.n_places_mesure
+                    ELSE i.n_places_min
+                END, 0
+              ) AS parking_estimate
+            FROM inventaire_stationnement i
+            WHERE i.g_no_lot = ln.g_no_lot
+            ORDER BY CASE i.methode_estime
+                      WHEN 1 THEN 1
+                      WHEN 2 THEN 2
+                      WHEN 3 THEN 3
+                      ELSE 4
+                    END
+            LIMIT 1
+          ) sub ON true
+          GROUP BY ln.id_quartier, ln.geometry, ln.superf_quartier,ln.nom_quartier
+        ),
+
+        inv_132 AS (
+          SELECT ln.id_quartier, ln.geometry, ln.superf_quartier, 
+                CEIL(SUM(COALESCE(sub.parking_estimate, 0))) AS inv_132
+          FROM LotNeighborhood ln
+          LEFT JOIN LATERAL (
+            SELECT 
+              COALESCE(
+                CASE WHEN i.methode_estime = 1 THEN i.n_places_mesure
+                    ELSE i.n_places_min
+                END, 0
+              ) AS parking_estimate
+            FROM inventaire_stationnement i
+            WHERE i.g_no_lot = ln.g_no_lot
+            ORDER BY CASE i.methode_estime
+                      WHEN 1 THEN 1
+                      WHEN 3 THEN 2
+                      WHEN 2 THEN 3
+                      ELSE 4
+                    END
+            LIMIT 1
+          ) sub ON true
+          GROUP BY ln.id_quartier, ln.geometry, ln.superf_quartier
+        ),
+
+        inv_213 AS (
+          SELECT ln.id_quartier, ln.geometry, ln.superf_quartier, 
+                CEIL(SUM(COALESCE(sub.parking_estimate, 0))) AS inv_213
+          FROM LotNeighborhood ln
+          LEFT JOIN LATERAL (
+            SELECT 
+              COALESCE(
+                CASE WHEN i.methode_estime = 2 THEN i.n_places_min
+                    WHEN i.methode_estime = 1 THEN i.n_places_mesure
+                    ELSE i.n_places_min
+                END, 0
+              ) AS parking_estimate
+            FROM inventaire_stationnement i
+            WHERE i.g_no_lot = ln.g_no_lot
+            ORDER BY CASE i.methode_estime
+                      WHEN 2 THEN 1
+                      WHEN 1 THEN 2
+                      WHEN 3 THEN 3
+                      ELSE 4
+                    END
+            LIMIT 1
+          ) sub ON true
+          GROUP BY ln.id_quartier, ln.geometry, ln.superf_quartier
+        ),
+
+        inv_231 AS (
+          SELECT ln.id_quartier, ln.geometry, ln.superf_quartier, 
+                CEIL(SUM(COALESCE(sub.parking_estimate, 0))) AS inv_231
+          FROM LotNeighborhood ln
+          LEFT JOIN LATERAL (
+            SELECT 
+              COALESCE(
+                CASE WHEN i.methode_estime = 2 THEN i.n_places_min
+                    WHEN i.methode_estime = 1 THEN i.n_places_mesure
+                    ELSE i.n_places_min
+                END, 0
+              ) AS parking_estimate
+            FROM inventaire_stationnement i
+            WHERE i.g_no_lot = ln.g_no_lot
+            ORDER BY CASE i.methode_estime
+                      WHEN 2 THEN 1
+                      WHEN 3 THEN 2
+                      WHEN 1 THEN 3
+                      ELSE 4
+                    END
+            LIMIT 1
+          ) sub ON true
+          GROUP BY ln.id_quartier, ln.geometry, ln.superf_quartier
+        ),
+
+        inv_312 AS (
+          SELECT ln.id_quartier, ln.geometry, ln.superf_quartier, 
+                CEIL(SUM(COALESCE(sub.parking_estimate, 0))) AS inv_312
+          FROM LotNeighborhood ln
+          LEFT JOIN LATERAL (
+            SELECT 
+              COALESCE(
+                CASE WHEN i.methode_estime = 3 THEN i.n_places_min
+                    WHEN i.methode_estime = 1 THEN i.n_places_mesure
+                    ELSE i.n_places_min
+                END, 0
+              ) AS parking_estimate
+            FROM inventaire_stationnement i
+            WHERE i.g_no_lot = ln.g_no_lot
+            ORDER BY CASE i.methode_estime
+                      WHEN 3 THEN 1
+                      WHEN 1 THEN 2
+                      WHEN 2 THEN 3
+                      ELSE 4
+                    END
+            LIMIT 1
+          ) sub ON true
+          GROUP BY ln.id_quartier, ln.geometry, ln.superf_quartier
+        ),
+
+        inv_321 AS (
+          SELECT ln.id_quartier, ln.geometry, ln.superf_quartier, 
+                CEIL(SUM(COALESCE(sub.parking_estimate, 0))) AS inv_321
+          FROM LotNeighborhood ln
+          LEFT JOIN LATERAL (
+            SELECT 
+              COALESCE(
+                CASE WHEN i.methode_estime = 3 THEN i.n_places_min
+                    WHEN i.methode_estime = 2 THEN i.n_places_min
+                    ELSE i.n_places_mesure
+                END, 0
+              ) AS parking_estimate
+            FROM inventaire_stationnement i
+            WHERE i.g_no_lot = ln.g_no_lot
+            ORDER BY CASE i.methode_estime
+                      WHEN 3 THEN 1
+                      WHEN 2 THEN 2
+                      WHEN 1 THEN 3
+                      ELSE 4
+                    END
+            LIMIT 1
+          ) sub ON true
+          GROUP BY ln.id_quartier, ln.geometry, ln.superf_quartier
+        )
 
 
-\begin{landscape}
-\Annexe{Encore une annexe / Another Appendix}
-Texte de l'annexe B\@ en mode «landscape».
-\end{landscape}
+        -- Final merge + insert
+        INSERT INTO stat_agrege (
+          id_quartier, geom, superf_quartier,nom_quartier,
+          inv_123, inv_132, inv_213, inv_231, inv_312, inv_321
+        )
+        SELECT 
+          i123.id_quartier,
+          i123.geometry,
+          i123.superf_quartier,
+          i123.nom_quartier,
+          i123.inv_123,
+          i132.inv_132,
+          i213.inv_213,
+          i231.inv_231,
+          i312.inv_312,
+          i321.inv_321
+        FROM inv_123 i123
+        LEFT JOIN inv_132 i132 ON i123.id_quartier = i132.id_quartier
+        LEFT JOIN inv_213 i213 ON i123.id_quartier = i213.id_quartier
+        LEFT JOIN inv_231 i231 ON i123.id_quartier = i231.id_quartier
+        LEFT JOIN inv_312 i312 ON i123.id_quartier = i312.id_quartier
+        LEFT JOIN inv_321 i321 ON i123.id_quartier = i321.id_quartier;
+\end{lstlisting}
 
-\Annexe{Une dernière annexe / The Last Appendix}
-Texte de l'annexe C\@.
+\section{Nombre d'automobiles résidents et nombre maximal d'automobiles par quartier}\label{sec:annex_motorisation_par_quartier}
+Le nombre de véhicules appartenant aux résidents d'un quartier peut être estimé à l'aide des données de l'enquête OD. Le nombre de véhicules des résidents est trouvé en multipliant le facteur ménage par le nombre de véhicules du ménages pour toutes les lignes qui sont en tête de ménage. Le nombre maximal de véhicules dans le quartier est issu des profiles d'accumulation véhicule \parencite{diallo_methodology_2015}.
+\begin{lstlisting}
+    DELETE FROM motorisation_par_quartier;
+    INSERT INTO motorisation_par_quartier (id_quartier, nb_voitures,nb_voitures_max_pav,nb_voitures_min_pav,diff_max_signee)
+    WITH aggregated_data AS (
+        SELECT
+            z.id_quartier::int,
+            CEIL(SUM(c.nbveh * c.facmen)) AS nb_voitures
+        FROM
+            sec_analyse z
+        JOIN
+            od_data c
+            ON ST_Within(c.geom_logis, z.geometry)
+        WHERE
+            c.tlog = 1
+        GROUP BY
+            z.id_quartier
+    )
+    SELECT
+        ad.id_quartier,
+        ad.nb_voitures,
+        MAX(pav.voitures) AS nb_voitures_max_pav,
+        MIN(pav.voitures) AS nb_voitures_min_pav,
+        CASE
+            WHEN ABS(ad.nb_voitures - MAX(pav.voitures)) > ABS(ad.nb_voitures - MIN(pav.voitures))
+            THEN MAX(pav.voitures)-ad.nb_voitures
+            ELSE MIN(pav.voitures) - ad.nb_voitures
+        END AS diff_max_signee
+    FROM
+        aggregated_data ad
+    LEFT JOIN
+        profile_accumulation_vehicule pav
+        ON pav.id_quartier::int = ad.id_quartier::int
+    GROUP BY
+        ad.id_quartier,
+        ad.nb_voitures;
+\end{lstlisting}
+\section{Population issue du recensement}\label{sec:annexe_pop_quartiers}
+Les données de recensement peuvent être agrégées par quartier en utilisant une approche similaire à au nombre d'automobile. Cependant, puisque les aires de diffusions sont des polygones et qu'il y a le potentiel d'avoir des aires de diffusions qui touchent à plusieurs quartiers, une condition a été ajouté voulant que 90\% de l'aire de diffusion doit être dans le quartier pour être sommée. 
+\begin{lstlisting}
+    DELETE FROM population_par_quartier;
+    INSERT INTO population_par_quartier (id_quartier,pop_tot_2016,pop_tot_2021)
+    WITH pop_2016_ag AS(
+      SELECT 
+        z.id_quartier,
+        sum(c2016.pop_2016) as pop_tot_2016
+      FROM
+        sec_analyse z
+      JOIN 
+        census_population_2016 c2016
+      ON 
+        ST_Intersects(z.geometry,c2016.geometry)
+      WHERE
+        ST_Area(ST_Intersection(z.geometry,c2016.geometry))/ ST_Area(c2016.geometry) >= 0.9
+      GROUP BY
+      z.id_quartier
+    ), pop_2021_ag as(
+      SELECT
+        z.id_quartier,
+        SUM(c2021.pop_2021) AS pop_tot_2021
+      FROM
+        sec_analyse z
+      JOIN
+        census_population c2021
+      ON
+        ST_Intersects(z.geometry, c2021.geometry)
+      WHERE
+        ST_Area(ST_Intersection(z.geometry, c2021.geometry)) / ST_Area(c2021.geometry) >= 0.9
+      GROUP BY
+        z.id_quartier
+    )
+    SELECT
+      c2016.id_quartier,
+      c2016.pop_tot_2016,
+      c2021.pop_tot_2021
+    FROM
+      pop_2016_ag c2016
+    JOIN
+      pop_2021_ag c2021
+    ON
+      c2016.id_quartier=c2021.id_quartier;
+\end{lstlisting}
+\section{Valeurs foncières agrégées}\label{sec:annexe_val_fonc_agreg}
+Certaines valeurs foncières sont agrégées pour donner une indication du degré d'intensité d'utilisation du sol dans un quartier. Les valeurs sont agrégées pour le total mais aussi pour les logements seulement. La requête ci-dessous donne la méthode de calcul pour les donnnées foncières agrégées.
+\begin{lstlisting}
+    DELETE FROM donnees_foncieres_agregees;
+    INSERT INTO donnees_foncieres_agregees (id_quartier,valeur_moyenne_logement,superf_moyenne_logement,valeur_fonciere_logement_totale,valeur_fonciere_totale)
+    WITH role_quartier_log AS(
+      SELECT 
+        sa.id_quartier::int,
+        ceil(SUM(rf.rl0404a)/sum(rf.rl0311a)) as val_moy_log,
+        ceil(SUM(rf.rl0308a)/sum(rf.rl0311a)) as sup_moy_log,
+        ceil(SUM(rf.rl0404a)) as val_tot_log
+      FROM
+        role_foncier rf
+      LEFT JOIN
+        sec_analyse sa on ST_Within(rf.geometry,sa.geometry)
+      where
+        rf.rl0105a::int = 1000 
+        and rf.rl0404a IS not null 
+        and rf.rl0308a IS not null 
+        and rf.rl0311a IS not null
+      group by sa.id_quartier
+      
+    ), role_quartier_tout AS(
+      SELECT 
+        sa.id_quartier::int,
+        ceil(SUM(rf.rl0404a)) as val_tot_tout
+      FROM
+        role_foncier rf
+      LEFT JOIN
+        sec_analyse sa on ST_Within(rf.geometry,sa.geometry)
+      where
+        rf.rl0404a is not null 
+      group by sa.id_quartier
+    )
+    SELECT 
+      sa.id_quartier::int,
+      rql.val_moy_log,
+      rql.sup_moy_log,
+      rql.val_tot_log,
+      rqt.val_tot_tout
+    from
+      sec_analyse sa
+    left join 
+      role_quartier_log rql on rql.id_quartier = sa.id_quartier
+    left join
+      role_quartier_tout rqt on rqt.id_quartier = sa.id_quartier;
+\end{lstlisting}
+
+\section{Parts modales}\label{sec:annexe_parts_modales}
+Cette section va donner la requête SQL qui compile les différentes parts modales définies dans la section \label{sec:meth_analyse}. 
+\begin{lstlisting}
+    DELETE FROM parts_modales;
+    INSERT INTO parts_modales(id_quartier,ac_res,ap_res,tc_res,mv_res,bs_res,ac_ori,ap_ori,tc_ori,mv_ori,bs_ori,ac_des,ap_des,tc_des,mv_des,bs_des,ac_int,ap_int,tc_int,mv_int,bs_int)
+    WITH trips AS (
+        SELECT
+            od.clepersonne,
+            od.nolog,
+            od.tlog,
+            od.facmen,
+            od.tper,
+            od.mobil,
+            od.facper,
+            od.mode1,
+            od.geom_logis,
+            od.geom_ori,
+            od.geom_des,
+            sa_logis.id_quartier AS quartier_logis,
+            sa_ori.id_quartier AS quartier_ori,
+            sa_des.id_quartier AS quartier_des,
+            CASE 
+                WHEN sa_ori.id_quartier = sa_des.id_quartier AND sa_ori.id_quartier IS NOT NULL 
+                THEN true ELSE false 
+            END AS internal_trip
+        FROM od_data AS od
+        LEFT JOIN sec_analyse sa_logis ON ST_Within(od.geom_logis, sa_logis.geometry)
+        LEFT JOIN sec_analyse sa_ori   ON ST_Within(od.geom_ori, sa_ori.geometry)
+        LEFT JOIN sec_analyse sa_des   ON ST_Within(od.geom_des, sa_des.geometry)
+        WHERE od.geom_ori IS NOT NULL AND sa_logis.id_quartier IS NOT NULL
+    )
+    SELECT
+        sa.id_quartier,
+
+        -- Resident trips
+        SUM(CASE WHEN trips.quartier_logis = sa.id_quartier AND trips.mode1 = 1 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_logis = sa.id_quartier THEN trips.facper END) * 100 AS AC_res,
+        SUM(CASE WHEN trips.quartier_logis = sa.id_quartier AND trips.mode1 = 2 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_logis = sa.id_quartier THEN trips.facper END) * 100 AS AP_res,
+        SUM(CASE WHEN trips.quartier_logis = sa.id_quartier AND trips.mode1 = 6 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_logis = sa.id_quartier THEN trips.facper END) * 100 AS TC_res,
+        SUM(CASE WHEN trips.quartier_logis = sa.id_quartier AND trips.mode1 IN (5, 13) THEN trips.facper END) / SUM(CASE WHEN trips.quartier_logis = sa.id_quartier THEN trips.facper END) * 100 AS MV_res,
+        SUM(CASE WHEN trips.quartier_logis = sa.id_quartier AND trips.mode1 = 7 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_logis = sa.id_quartier THEN trips.facper END) * 100 AS BS_res,
+
+        -- Origin trips (external)
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 1 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS AC_ori,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 2 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS AP_ori,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 6 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS TC_ori,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 IN (5, 13) THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS MV_ori,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 7 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS BS_ori,
+
+        -- Destination trips (external)
+        SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 1 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS AC_des,
+        SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 2 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS AP_des,
+        SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 6 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS TC_des,
+        SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 IN (5, 13) THEN trips.facper END) / SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS MV_des,
+        SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false AND trips.mode1 = 7 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_des = sa.id_quartier AND trips.internal_trip = false THEN trips.facper END) * 100 AS pBS_des,
+
+        -- Internal trips
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true AND trips.mode1 = 1 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true THEN trips.facper END) * 100 AS AC_int,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true AND trips.mode1 = 2 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true THEN trips.facper END) * 100 AS AP_int,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true AND trips.mode1 = 6 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true THEN trips.facper END) * 100 AS TC_int,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true AND trips.mode1 IN (5, 13) THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true THEN trips.facper END) * 100 AS MV_int,
+        SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true AND trips.mode1 = 7 THEN trips.facper END) / SUM(CASE WHEN trips.quartier_ori = sa.id_quartier AND trips.internal_trip = true THEN trips.facper END) * 100 AS BS_int
+    FROM sec_analyse sa
+    LEFT JOIN trips ON 
+        trips.quartier_logis = sa.id_quartier OR 
+        trips.quartier_ori = sa.id_quartier OR 
+        trips.quartier_des = sa.id_quartier
+    GROUP BY sa.id_quartier, sa.geometry;
+\end{lstlisting}
